--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,42 @@
 
         <title>{%block title%}{%endblock%}</title>
     </head>
-    <body>{%block body%}{%endblock%}</body>
+    <body class="center">
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark border">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse align-items-right" id="navbar">
+                    {%if session.username%}
+                    <span class="mr-auto text-light text-small btn-sm">Logged in as <span class="badge badge-warning">{{session.username}}</span></span>
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Index</a>
+                        </li><li class="nav-item">
+                            <a class="nav-link" href="#">Reviews</a>
+                        </li><li class="nav-item">
+                            <a class="nav-link" href="#">Search</a>
+                        </li><li class="nav-item">
+                            <a class="nav-link" href="#">Logout</a>
+                        </li>
+                    </ul>
+                    {%else%}
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{url_for('login')}}">Login</a>
+                        </li>
+                    </ul>
+                    {%endif%}
+                </div>
+            </nav>
+        </header>
+        <main class="container p-5">
+            {%block main%}{%endblock%}
+        </main>
+        <footer>
+            Footer
+        </footer>
+    </body>
     {%block script%}{%endblock%}
 </html>
