--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,26 +14,35 @@
     </head>
     <body class="center">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark border">
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark border">
+                <a class="navbar-brand border-important" href="/"><span class="navbartitle rounded padding-h-10">Books</span></a>
+                {%if session.username%}
+                    <span class="mr-auto text-light text-small btn-sm">Logged in as <span class="badge bg-dark-warning">{{session.username}}</span></span>
+                {%endif%}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse align-items-right" id="navbar">
                     {%if session.username%}
-                    <span class="mr-auto text-light text-small btn-sm">Logged in as <span class="badge badge-warning">{{session.username}}</span></span>
                     <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Index</a>
-                        </li><li class="nav-item">
-                            <a class="nav-link" href="#">Reviews</a>
-                        </li><li class="nav-item">
-                            <a class="nav-link" href="#">Search</a>
-                        </li><li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link rounded hover-light" href="{{url_for('index')}}">Index</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link rounded hover-light" href="{{url_for('index')}}">Reviews</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link rounded hover-light" href="{{url_for('index')}}">Search</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link rounded hover-light" href="{{url_for('logout')}}">Logout</a>
                         </li>
                     </ul>
                     {%else%}
                     <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{url_for('register')}}">Register</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('login')}}">Login</a>
                         </li>
