--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,23 @@
 {% extends "layout.html" %}
-{%block body%}
-    <div class="container">
-        <h2>
-            Login
-        </h2>
-        <form method="POST">
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md-4">
-                    <input autofocus type="text" name="username" class="form-control" placeholder="Username">
-                </div>
-                <div class="col-md-4">
-                    <input type="password" name="password" class="form-control" placeholder="Password">
-                </div>
-                <div class="col-md-2"></div>
+{%block main%}
+    <h2>
+        Login
+    </h2>
+    <form method="POST">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-4">
+                <input autofocus type="text" name="username" class="form-control" placeholder="Username">
             </div>
-            <div class="row">
-                <div class="col">
-                    <button class="btn btn-primary">Submit</button>
-                </div>
+            <div class="col-md-4">
+                <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
-        </form>
-    </div>
+            <div class="col-md-2"></div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <button class="btn btn-primary">Submit</button>
+            </div>
+        </div>
+    </form>
 {%endblock%}
