--- a/templates/error.html
+++ b/templates/error.html
@@ -1,9 +1,7 @@
 {% extends "layout.html" %}
-{%block body%}
-    <div class="container">
+{%block main%}
         <h2>
             Error
         </h2>
         <div class="alert alert-danger">{{ msg }}</div>
-    </div>
 {%endblock%}
