--- a/templates/register.html
+++ b/templates/register.html
@@ -1,18 +1,18 @@
 {% extends "layout.html" %}
-{%block body%}
+{%block main%}
     <h2>
         Register
     </h2>
-    <form method="POST">
+    <form method="POST" class="center width-50">
         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-4">
+            <div class="col">
                 <input autofocus type="text" name="username" class="form-control" placeholder="Username">
             </div>
-            <div class="col-md-4">
+        </div>
+        <div class="row">
+            <div class="col">
                 <input type="password" name="password" class="form-control" placeholder="Password">
             </div>
-            <div class="col-md-2"></div>
         </div>
         <div class="row">
             <div class="col">
