--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,13 +1,22 @@
 <html>
     <head>
 
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="/static/style.css">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <!-- Data Tables -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css" rel="stylesheet">
+        <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet">
         
+        <link rel="stylesheet" href="/static/style.css">
+        
+        <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+        <!-- Data Tables -->
+        <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>{%block title%}{%endblock%}</title>
@@ -23,8 +32,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse align-items-right" id="navbar">
-                    {%if session.username%}
                     <ul class="navbar-nav ml-auto mt-2">
+                    {%if session.username%}
                         <li class="nav-item">
                             <a class="nav-link rounded hover-light" href="{{url_for('index')}}">Index</a>
                         </li>
@@ -32,22 +41,20 @@
                             <a class="nav-link rounded hover-light" href="{{url_for('index')}}">Reviews</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link rounded hover-light" href="{{url_for('index')}}">Search</a>
+                            <a class="nav-link rounded hover-light" href="{{url_for('search')}}">Search</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link rounded hover-light" href="{{url_for('logout')}}">Logout</a>
                         </li>
-                    </ul>
                     {%else%}
-                    <ul class="navbar-nav ml-auto mt-2">
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('register')}}">Register</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{url_for('login')}}">Login</a>
                         </li>
-                    </ul>
                     {%endif%}
+                    </ul>
                 </div>
             </nav>
         </header>
