--- a/templates/layout.html
+++ b/templates/layout.html
@@ -32,7 +32,14 @@
             <nav class="navbar navbar-expand-md navbar-dark bg-dark border">
                 <a class="navbar-brand border-important" href="/"><span class="navbartitle rounded padding-h-10">Books</span></a>
                 {%if session.username%}
-                    <span class="mr-auto text-light text-small btn-sm">Logged in as <span class="badge bg-dark-warning">{{session.username}}</span></span>
+                <div class="navbar-nav mr-auto mt-2">
+                    <div class="nav-item">
+                        <span class="text-light">Logged in as <span style="padding-left: 2.5; padding-right: 2.5;" class="text-danger font-weight-bold bg-light rounded">{{session.username}}</span></span>
+                    </div>
+                    <div class="nav-item">
+                        <a class="ml-3 rounded hover-light text-light font-weight-light" href="{{url_for('logout')}}">Logout</a>
+                    </div>
+                </div>
                 {%endif%}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -41,16 +48,16 @@
                     <ul class="navbar-nav ml-auto mt-2">
                     {%if session.username%}
                         <li class="nav-item">
-                            <a class="nav-link rounded hover-light" href="{{url_for('index')}}">Index</a>
+                            <a class="nav-link rounded hover-light text-light" href="{{url_for('index')}}">Index</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link rounded hover-light" href="{{url_for('index')}}">Reviews</a>
+                            <a class="nav-link rounded hover-light text-light" href="{{url_for('index')}}">Reviews</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link rounded hover-light" href="{{url_for('search')}}">Search</a>
+                            <a class="nav-link rounded hover-light text-light" href="{{url_for('search')}}">Search</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link rounded hover-light" href="{{url_for('logout')}}">Logout</a>
+                            <a class="nav-link rounded hover-light text-light" href="{{url_for('logout')}}">Logout</a>
                         </li>
                     {%else%}
                         <li class="nav-item">
