--- a/templates/search.html
+++ b/templates/search.html
@@ -3,12 +3,30 @@
     <h2>
         Search {%if results%}Results{%endif%}
     </h2>
-    <form method="POST" class="center width-50 btn-group">
-        <input type="text" class="form-control" placeholder="isbn, title or author" name="search">
-        <button type="submit" class="btn btn-primary">🔎</button>
-    </form>
+    <div class="container mt-4 mb-4">
+        <form method="POST" class="center col-6">
+            <div class="input-group btn-group">
+                <input id="search-string" type="text" class="form-control" placeholder="isbn, title or author's name" name="search" autofocus>
+                <button type="submit" class="btn btn-primary">🔎</button>
+            </div>
+            <div class="input-group mt-3">
+                <div class="form-check form-check-inline col-4 m-auto">
+                    <input name="search-option" class="form-check-input" type="checkbox" id="isbn" value="isbn">
+                    <label class="form-check-label" for="isbn">ISBN</label>
+                </div>
+                <div class="form-check form-check-inline col-4 m-auto">
+                    <input name="search-option" class="form-check-input" type="checkbox" id="title" value="title">
+                    <label class="form-check-label" for="title">Title</label>
+                </div>
+                <div class="form-check form-check-inline col-4 m-auto">
+                    <input name="search-option" class="form-check-input" type="checkbox" id="name" value="name">
+                    <label class="form-check-label" for="name">Author</label>
+                </div>
+            </div>
+        </form>
+    </div>
     {%if request.method == "POST"%}
-        <div class="col-4 vertical-margin-10">Showing results for <span class="text-light bg-dark rounded container">{{search_string}}</span></div>
+        <div class="col-4 mb-3 text-left text-muted">Showing results for <span class="text-danger">{{search_string}}</span></div>
         <table id="results" class="table table-striped table-hover center">
             <thead>
                 <tr>
@@ -49,6 +67,7 @@
             }
         }
         $(document).ready( function () {
+            // DataTables
             $('#results').DataTable({
             "language": {
                 "emptyTable": "No books found..."
@@ -56,6 +75,15 @@
             "searching": false,
             "createdRow": addlink
             });
+
+            // check the boxes from the previous search
+            let search_options = JSON.parse('{{search_options}}'.replace(/&#39;/g, '"'))
+            for (option of search_options){
+                document.querySelector(`#${option}`).setAttribute("checked", "true")
+            }
+
+            // set the value of the searchbox to the prev search string
+            document.querySelector('#search-string').setAttribute('value', '{{search_string}}')
         } );
     </script>
 {%endblock%}
