--- a/templates/book.html
+++ b/templates/book.html
@@ -45,7 +45,13 @@
 {%block script%}
 <script>
     var data = "{{data}}"
-    console.log(data)
+    .replace(/[a-zA-Z]&#39;[a-zA-Z]/g,
+        (x)=>{return x.replace(/&#39;/, "'")})
+    .replace(/\s&#34;/g,
+        (x)=>{return x.replace(/&#34;/, '"')})
+    .replace(/&#39;/g, '"')
+    .replace(/&#34;/g, "'")
+    data = JSON.parse(data)
     function moreBySameAuthor(){
         $.redirect("/search", {"search": data["author"], "search-option": ["name"]}, "POST")
     }
