--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,6 +16,10 @@
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
         <!-- Data Tables https://datatables.net/ -->
         <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
@@ -34,7 +38,7 @@
                 {%if session.username%}
                 <div class="navbar-nav mr-auto mt-2">
                     <div class="nav-item">
-                        <span class="text-light">Logged in as <span style="padding-left: 2.5; padding-right: 2.5;" class="text-danger font-weight-bold bg-light rounded">{{session.username}}</span></span>
+                        <span class="text-light">Logged in as <span style="padding-left: 2.5; padding-right: 2.5;" class="text-danger bg-light rounded">{{session.username}}</span></span>
                     </div>
                     <div class="nav-item">
                         <a class="ml-3 rounded hover-light text-light font-weight-light" href="{{url_for('logout')}}">Logout</a>
