--- a/templates/book.html
+++ b/templates/book.html
@@ -37,6 +37,11 @@
                     by <b>{{data['goodreads_count']}}</b> Readers
                 </td>
             </tr>
+            <tr>
+                <td colspan="4" class="center">
+                    <a href="review/{{data['isbn']}}" class="btn btn-primary">Review this book</a>
+                </td>
+            </tr>
         </table>
     </div>
 </div>
