Fixed review button link

--- a/templates/book.html
+++ b/templates/book.html
@@ -39,7 +39,7 @@
             </tr>
             <tr>
                 <td colspan="4" class="center">
-                    <a href="review/{{data['isbn']}}" class="btn btn-primary">Review this book</a>
+                    <a href="../review/{{data['isbn']}}" class="btn btn-primary">Review this book</a>
                 </td>
             </tr>
         </table>
