--- a/templates/search.html
+++ b/templates/search.html
@@ -30,19 +30,21 @@
         <table id="results" class="table table-striped table-hover center">
             <thead>
                 <tr>
-                    <th class="text-muted">ISBN</th>
+                    <th class="text-muted" style="text-align: left;">ISBN</th>
                     <th>Title</th>
                     <th>Author</th>
                     <th>Year</th>
+                    <!-- <th></th> -->
+                    <th></th>
                     <!-- <th>Reviews</th> -->
                 </tr>
             </thead>
             <tbody>
             {%for result in results%}
                 <tr data-isbn="{{result['isbn']}}">
-                    <td class="text-muted">
+                    <th class="text-muted" style="text-align: left;">
                         {{result['isbn']}}
-                    </td>
+                    </th>
                     <td>
                         {{result['title']}}
                     </td>
@@ -51,6 +53,14 @@
                     </td>
                     <td>
                         {{result['year']}}
+                    </td>
+                    <!-- <td>
+                        {{result['our_rating']}}
+                    </td> -->
+                    <td>
+                        <a class="badge badge-primary">
+                            View Details
+                        </a>
                     </td>
                 </tr>
             {%endfor%}
@@ -127,12 +137,13 @@
             document.querySelector("form").submit();
         }
 
-        function addlink(row, data, dataindex, cells){
-            row.onclick = function(){
-                storeSearch();
-                window.location = "/books/" + this.dataset.isbn
+        function addlink(cell, cellData, rowData, dataindex, cells){
+            cell.querySelector("a").setAttribute("href", "/books/" + cell.parentNode.dataset.isbn)
+            cell.parentNode.onclick = function(){
+                window.location = "/books/" + cell.parentNode.dataset.isbn
             }
         }
+
         $(document).ready( function () {
             // store the author name if we got to the search from a book page
             if (document.referrer.includes("books")){
@@ -145,12 +156,15 @@
             }
             // DataTables
             $('#results').DataTable({
-            language: {
-                "emptyTable": "No books found..."
-            },
-            searching: false,
-            createdRow: addlink,
-            order: [[1, 'asc']]
+                language: {
+                    "emptyTable": "No books found..."
+                },
+                searching: false,
+                order: [[1, 'asc']],
+                columnDefs: [
+                    { orderable: false, targets: [4] },
+                    { createdCell: addlink, targets: [4]}
+                ]
             });
             restoreSearch();
         } );
