--- a/templates/review.html
+++ b/templates/review.html
@@ -3,6 +3,9 @@
     <h3>
         Submit a Review
     </h3>
+    {%if msg%}
+    <div class="alert alert-danger">{{msg}}</div>
+    {%endif%}
     <form method="POST" class="center width-50">
         <div class="row">
             <div class="col">
