--- a/templates/layout.html
+++ b/templates/layout.html
@@ -79,7 +79,7 @@
             {%block main%}{%endblock%}
         </main>
         <footer>
-            Footer
+            Mamdouh W. © 2020
         </footer>
     </body>
     {%block script%}{%endblock%}
