Fixed website user review count

--- a/templates/book.html
+++ b/templates/book.html
@@ -18,7 +18,7 @@
                     {%endfor%}
                 </td>
                 <td>
-                    by <b>{{reviews|length}}</b> Readers
+                    by <b>{{data['our_count']}}</b> Readers
                 </td>
             </tr>
             <tr>
